# serenity-slash-decode

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: bot.rs
src/: errors.rs  lib.rs
